syntax = "proto3";
package DomainServices.UserService;
option csharp_namespace = "DomainServices.UserService.Contracts";

message GetUserBasicInfoRequest {
	int32 UserId = 1;
}

message GetUserBasicInfoResponse {
	string DisplayName = 1;
}